added param config and update dashboard

--- a/config.json
+++ b/config.json
@@ -1,17 +1,36 @@
 {
-  "parameters": [
-    {
-      "name": "Parameter 1",
-      "value": "Value 1"
-    },
-    {
-      "name": "Parameter 2",
-      "value": "Value 2"
-    },
-    {
-      "name": "Parameter 3",
-      "value": "Value 3"
-    }
-
-  ]
+    "parameters": [
+        {
+            "name": "Shift A Production",
+            "value": "SHIFT_A_PROD"
+        },
+        {
+            "name": "Shift B Production",
+            "value": "SHIFT_A_PROD"
+        },
+        {
+            "name": "SHIFT_C_PROD",
+            "value": "SHIFT_A_PROD"
+        },
+        {
+            "name": "SHIFT_D_PROD",
+            "value": "SHIFT_A_PROD"
+        },
+        {
+            "name": "SHIFT_E_PROD",
+            "value": "SHIFT_A_PROD"
+        },
+        {
+            "name": "SHIFT_F_PROD",
+            "value": "SHIFT_A_PROD"
+        },
+        {
+            "name": "SHIFT_G_PROD",
+            "value": "SHIFT_A_PROD"
+        },
+        {
+            "name": "SHIFT_H_PROD",
+            "value": "SHIFT_A_PROD"
+        }
+    ]
 }
